--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 <meta itemprop="description" content="Welcome to my portfolio website. Part of Offensive Security.">
 
 <!-- Reference screenshot of updated site's header in place of content -->
-<meta itemprop="image" content="assets/images/sharing-card.png">
+<meta itemprop="image" content="assets/images/blackmarlinexec2.png">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://ossportfolio.netlify.app">
+<meta property="og:url" content="">
 <meta property="og:type" content="website">
 <meta property="og:title" content="byt3n33dl3 portfolio">
 <meta property="og:description" content="Welcome to my portfolio website. Part of Offensive Security.">
 
 <!-- Reference screenshot of updated site's header in content -->
-<meta property="og:image" content="assets/images/sharing-card.png">
+<meta property="og:image" content="assets/images/blackmarlinexec2.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Welcome to my portfolio website. Part of Offensive Security.">
 
 <!-- Reference screenshot of updated site's header in content -->
-<meta name="twitter:image" content="assets/images/sharing-card.png">
+<meta name="twitter:image" content="assets/images/blackmarlinexec2.png">
 
 
 <!-- Update favicon href attribute with image of yourself -->
@@ -100,7 +100,7 @@
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
             Security Engineer <b>|</b> Offensive Security <b>|</b> Sr. Penetration Tester <b>|</b> Cyber Security <b>|</b> 
-            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex DBS | Ex SpaceX</b>
+            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex SpaceX</b>
           </p>
           <div class="header-btns">
             <a href="index.html" class="btn btn-cta">Experiences Domain</a>
@@ -119,7 +119,7 @@
             <div class="logo-group">
               <img
                 loading="lazy"
-                src="assets/images/trusted-by/sec.png"
+                src="assets/images/trusted-by/samsung.png"
                 alt="Ideacraft"
                 class="logo hide to-top"
               />
@@ -192,7 +192,7 @@
               />
               <img
                 loading="lazy"
-                src="assets/images/trusted-by/thom.png"
+                src="assets/images/trusted-by/nasa.png"
                 alt="Fastlane"
                 class="logo hide to-bottom"
               />
@@ -207,7 +207,7 @@
             <div class="work-box">
               <div class="work-textbox">
                 <h3 class="h3">BYT3N33DL3 Intro</h3><br>
-                Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex (APT28) Espionage.<br><br>
+                Offensive Security<br><br>
                 <!-- Add your project title here -->
                 <h3 class="h3">Security Certifications</h3>
                 <!-- Add small description of your project  -->
@@ -373,7 +373,7 @@
                   </div>
                 </div><br>
                 <!-- Add technologies you used to build the project -->
-                <h3 class="h3">Recognize By</h3><br>
+                <h3 class="h3">My EXP : Learning</h3><br>
                 <ol class="work-technologies">
                   <li>INE Security</li>
                   <li>Offensive Security</li>
@@ -390,12 +390,13 @@
                   <li>Pentester Academy</li>
                   <li>GAQM</li>
                   <li>ISACA</li>
-                  <li>MIT</li>
+                  <li>MIT [xPRO]</li>
                   <li>AWS Certification</li>
                   <li>CREST</li>
                   <li>TCM Security</li>
                   <li>RedTeam</li>
                   <li>SUNY</li>
+                  <li>NASA</li>
                   <li>HKUST</li>
                   <li>IT Governance</li>
                   <li>EC-Council</li>
@@ -1234,9 +1235,25 @@
       <!-- Replace testimonials, author name, author job, img src and, alt attributes -->
 
       <section>
-        <h2 class="h2">Hands on Experiences</h2>
+        <h2 class="h2">My Footprint</h2>
         <div class="container">
           <ol class="testimonials">
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Senior Security Engineer.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/orbit.jpg"
+                  alt="Adam Argalye"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Telkomsel Orbit</h3>
+                  <p class="testimonial-author-job">Senior Security Engineer</p>
+                </figcaption>
+              </figure>
+            </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
                 Telkomsel Enterprise Designer in Social Marketing Department.
@@ -1288,22 +1305,6 @@
                   </h3>
                   <p class="testimonial-author-job">Security Engineer
                   </p>
-                </figcaption>
-              </figure>
-            </li>
-            <li class="testimonial">
-              <blockquote class="testimonial-text">
-                Senior Security Engineer.
-              </blockquote>
-              <figure class="testimonial-author">
-                <img
-                  src="assets/images/trusted-by/orbit.jpg"
-                  alt="Adam Argalye"
-                  loading="lazy"
-                />
-                <figcaption>
-                  <h3 class="testimonial-author-name">Telkomsel Orbit</h3>
-                  <p class="testimonial-author-job">Senior Security Engineer</p>
                 </figcaption>
               </figure>
             </li>
@@ -1486,9 +1487,26 @@
           </ol>
         </div><br>
       <section>
-        <h2 class="h2">My Footprint</h2>
+        <h2 class="h2">Empowering and Experiences</h2>
         <div class="container">
           <ol class="testimonials">
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                My experience as a Senior Security Engineer are expected to Documentation, 
+                resolve technical faults and allocate resources.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/orbit.jpg"
+                  alt="Brian Hirsh"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Telkomsel Orbit</h3>
+                  <p class="testimonial-author-job">Senior Security Engineer</p>
+                </figcaption>
+              </figure>
+            </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
                 Telkomsel Enterprise Designer in Social Marketing Department. Designing for some Campaign.
@@ -1578,23 +1596,6 @@
                   </h3>
                   <p class="testimonial-author-job">Security Engineer
                   </p>
-                </figcaption>
-              </figure>
-            </li>
-            <li class="testimonial">
-              <blockquote class="testimonial-text">
-                My experience as a Senior Security Engineer are expected to Documentation, 
-                resolve technical faults and allocate resources.
-              </blockquote>
-              <figure class="testimonial-author">
-                <img
-                  src="assets/images/trusted-by/orbit.jpg"
-                  alt="Brian Hirsh"
-                  loading="lazy"
-                />
-                <figcaption>
-                  <h3 class="testimonial-author-name">Telkomsel Orbit</h3>
-                  <p class="testimonial-author-job">Senior Security Engineer</p>
                 </figcaption>
               </figure>
             </li>
@@ -2035,7 +2036,7 @@
         <h2 class="h2">Security Escalation</h2><br>
       <section class="timeline">
         <div class="timeline-item">
-            <div class="timeline-time">-</div>
+            <div class="timeline-time">Microsoft Azure</div>
             <div class="timeline-dot"></div>
             <div class="timeline-content">
                 <h3>2025</h3>
