--- a/tool.html
+++ b/tool.html
@@ -18,16 +18,16 @@
 <meta itemprop="description" content="Welcome to my portfolio website. Part of Offensive Security.">
 
 <!-- Reference screenshot of updated site's header in place of content -->
-<meta itemprop="image" content="assets/images/sharing-card.png">
+<meta itemprop="image" content="assets/images/blackmarlinexec2.png">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://ossportfolio.netlify.app">
+<meta property="og:url" content="">
 <meta property="og:type" content="website">
 <meta property="og:title" content="byt3n33dl3 portfolio">
 <meta property="og:description" content="Welcome to my portfolio website. Part of Offensive Security.">
 
 <!-- Reference screenshot of updated site's header in content -->
-<meta property="og:image" content="assets/images/sharing-card.png">
+<meta property="og:image" content="assets/images/blackmarlinexec2.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Welcome to my portfolio website. Part of Offensive Security.">
 
 <!-- Reference screenshot of updated site's header in content -->
-<meta name="twitter:image" content="assets/images/sharing-card.png">
+<meta name="twitter:image" content="assets/images/blackmarlinexec2.png">
 
 
 <!-- Update favicon href attribute with image of yourself -->
@@ -100,7 +100,7 @@
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
             Security Engineer <b>|</b> Offensive Security <b>|</b> Sr. Penetration Tester <b>|</b> Cyber Security <b>|</b> 
-            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex DBS | Ex SpaceX</b>
+            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex SpaceX</b>
           </p>
           <div class="header-btns">
             <a href="tool.html" class="btn btn-cta">Software Blog</a>
@@ -117,7 +117,7 @@
             <div class="logo-group">
               <img
                 loading="lazy"
-                src="assets/images/trusted-by/sec.png"
+                src="assets/images/trusted-by/samsung.png"
                 alt="Ideacraft"
                 class="logo hide to-top"
               />
@@ -190,7 +190,7 @@
               />
               <img
                 loading="lazy"
-                src="assets/images/trusted-by/thom.png"
+                src="assets/images/trusted-by/nasa.png"
                 alt="Fastlane"
                 class="logo hide to-bottom"
               />
